/*
 * Proto file for maintaining the list of services implemented by OpenCDx Classification.
 */
syntax = "proto3";
option java_multiple_files = true;
package cdx.opencdx.grpc.service.classification;
import "opencdx_data.proto";
import "google/protobuf/timestamp.proto";


/*
 * Represents the request to retrieve client-level rules.
 */
message RuleSetsRequest {
  /*
   * The ID of the specified organization linked to the Questionnaire data.
   */
  optional string organization_id = 1;
  /*
   * The ID of the specified workspace linked to the Questionnaire data.
   */
  optional string workspace_id = 2;
}


/*
 * Represents the response retrieved from the GetRuleSets operation.
 */
message RuleSetsResponse {
  /*
   * The collection of rule sets that are available.
   */
  repeated cdx.opencdx.grpc.data.RuleSet rule_sets = 1;
}

/*
 * The response message to user classification request.
 */
message ClassificationResponse {
  /*
   * The classification result.
   */
  cdx.opencdx.grpc.data.Classification classification = 1;
}

/*
 * The request message detailing user-provided information for classification.
 */
message ClassificationRequest {
  /*
   * Information provided by user for classification.
   */
  cdx.opencdx.grpc.data.UserAnswer user_answer = 1;
}

/*
 * Service providing the Classify RPC for test kit classification.
 */
service ClassificationService {
  /*
 * Defines operations for FHIR questionnaires
 */
  rpc GetRuleSets(RuleSetsRequest) returns (RuleSetsResponse);
  /*
   * Classify RPC returns a classification result based on UserAnswer input.
   */
  rpc Classify(ClassificationRequest) returns (ClassificationResponse);

}